--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gases-intro",
-  "version": "1.0.4-rc.3",
+  "version": "1.0.4",
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
