Supply colorProfiles, see https://github.com/phetsims/scenery-phet/issues/515

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt": "~1.4.0"
   },
   "phet": {
+    "colorProfiles": [ "default", "projector" ],
     "requirejsNamespace": "GASES_INTRO",
     "simulation": true,
     "runnable": true,
