--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "grunt": "~1.5.3"
   },
   "phet": {
-    "colorProfiles": [ "default", "projector" ],
     "requirejsNamespace": "GASES_INTRO",
     "simulation": true,
     "runnable": true,
@@ -23,6 +22,12 @@
       "phet-io",
       "adapted-from-phet"
     ],
+    "simFeatures": {
+      "colorProfiles": [
+        "default",
+        "projector"
+      ]
+    },
     "supportsOutputJS": true
   },
   "eslintConfig": {
