--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gases-intro",
-  "version": "1.0.20-rc.2",
+  "version": "1.0.20",
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
