Convert tsconfig to use project references, see https://github.com/phetsims/chipper/issues/1356

--- a/package.json
+++ b/package.json
@@ -58,6 +58,11 @@
               "ts-nocheck": true
             }
           ]
+        },
+        "parserOptions": {
+          "project": [
+            "../gases-intro/tsconfig.json"
+          ]
         }
       }
     ]
