--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
         },
         "parserOptions": {
           "project": [
-            "../gases-intro/tsconfig.json"
+            "../chipper/tsconfig/eslint-all/tsconfig.json"
           ]
         }
       }
