--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gases-intro",
-  "version": "1.1.1-rc.3",
+  "version": "1.1.1",
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
